fix(zodiaclist): Change hover background color of ZodiacSignList to white for better visibility in style.css

--- a/page/zodiacsignlists/assets/css/style.css
+++ b/page/zodiacsignlists/assets/css/style.css
@@ -47,7 +47,7 @@ header{
     transition: background-color 0.3s ease;
 }
 .navbar #ZodiacSignList:hover{
-    background-color: rgb(167, 167, 167);
+    background-color: rgb(255, 255, 255);
     color: rgb(255, 255, 255);
 }
 .listcontainer{
